--- a/styles.css
+++ b/styles.css
@@ -109,14 +109,13 @@ body {
 }
 /*フッター*/
 .site-footer {
-  top: 100;
-  bottom: 20;
+  padding: 60px;
 }
 /*Top Page*/
 .hero-title {
-  top: 80px;
+  top: 150px;
   bottom: 20px;
-  fontsize: 20px;
+  fontsize: 22px;
 }
 /*トップページキャラクター*/
 .hero-character {
@@ -140,22 +139,22 @@ body {
   display: flex;
   align-items: center;     /* 上下の位置を揃える */
   justify-content: center; /* 中央寄せ */
-  gap: 60px;               /* 左右の余白 */
+  gap: 70px;               /* 左右の余白 */
   margin: 80px auto;
   max-width: 1000px;       /* セクションの最大幅 */
 }
 
 .app-icon {
-  width: 500px;  /* 好きなサイズに調整 可愛い */
+  width: 500px; 
   height: auto;
-  right: 30px;
+  right: 100px;
 }
 
 .app-title {
-  width: 600px;  /* ここも好みで */
+  width: 700px;  
   height: auto;
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   left: 20px;
 }
 
@@ -165,12 +164,12 @@ body {
   align-items: flex-start; /* 左揃え（Figmaに近い感じ） */
   width: 300px;
   height: auto;
-  left: 20px;
 }
 
 .app-learnmore {
   margin: 0 auto;
   width: 300px;
+  padding: 20px;
 }
 /*Learn more Hover*/
 .btn-primary {
@@ -207,8 +206,7 @@ body {
 
 /*Work Experience*/
 .works-title {
-  top: 80px;
-  bottom: 50px;
+  padding: 30px;
 }
 
 .works-grid {
