--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,7 @@ body {
 }
 /*Top Page*/
 .hero-title {
-  top: 150px;
-  bottom: 20px;
+  margin-top: 150px;
   fontsize: 22px;
 }
 /*トップページキャラクター*/
@@ -151,29 +150,29 @@ body {
 .app-icon {
   width: 500px; 
   height: auto;
-  right: 100px;
+  margin-right: 30px;
 }
 
 .app-title {
   width: 700px;  
   height: auto;
   display: block;
-  margin-bottom: 15px;
-  left: 20px;
+  margin-bottom: 5px;
+  margin-left: 20px;
 }
 
 .app-content {
   display: flex;
   flex-direction: column; /* 縦に並べる */
   align-items: flex-start; /* 左揃え（Figmaに近い感じ） */
-  width: 300px;
+  width: 250px;
   height: auto;
 }
 
 .app-learnmore {
   margin: 0 auto;
   width: 300px;
-  padding: 20px;
+  margin-bottom: 50px;
 }
 /*Learn more Hover*/
 .btn-primary {
@@ -210,7 +209,8 @@ body {
 
 /*Work Experience*/
 .works-title {
-  padding: 30px;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .works-grid {
@@ -220,6 +220,6 @@ body {
   gap: 20px;
   display: flex;
   margin: 0 auto;
-  bottom: 70px;
+  margin-bottom: 70px;
 }
 
