--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ body {
   display: flex;
   flex-direction: column; 
   align-items: center; 
+  gap: -20px;
 }
 
 .apple-store-logo {
@@ -173,9 +174,8 @@ body {
 }
 
 .app-learnmore {
-  margin: 0 auto;
+  margin: -20px auto;
   width: 250px;
-  margin-bottom: 100px;
 }
 /*Learn more Hover*/
 .btn-primary {
@@ -212,8 +212,8 @@ body {
 
 /*Work Experience*/
 .works-title {
-  margin-top: 80px;
-  margin-bottom: 70px,
+  margin-top: 120px;
+  margin-bottom: 100px,
 }
 
 .works-grid {
