--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,8 @@ body {
 
 /*Work Experience*/
 .works-title {
-  padding: 70px;
+  padding-top: 70px;
+  padding-bottom: 20px;
 }
 
 .works-grid {
