--- a/styles.css
+++ b/styles.css
@@ -448,6 +448,29 @@ body {
   display: block;
 }
 
+.Why-I-built-this-app {
+  width: 1000px;
+  margin: 0 auto; 
+  display: flex;
+  gap: 10px;
+  padding: 40px 0;
+  align-items: center;    
+  justify-content: center; 
+}
 
+.Why-I-built-this-app-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* ← 左寄せにする正しい指定 */
+  justify-content: center;
+  text-align: left;
+}
+
+.Snuffy-Meltan-photos {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  gap: 3px;
+}
 
 
