--- a/styles.css
+++ b/styles.css
@@ -470,6 +470,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; 
+  gap: 10px;
+  width: 200px;
+  height: auto;
 }
 
 .Snuffy-Meltan-photos {
