--- a/styles.css
+++ b/styles.css
@@ -480,4 +480,51 @@ body {
   height: auto;
 }
 
+.The-world-of-MFF {
+  width: 1000px;
+  margin: 0 auto; 
+  display: flex;
+  gap: 10px;
+  padding: 70px 0;
+  align-items: center;    
+  justify-content: center; 
+}
 
+.The-world-of-MFF-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* ← 左寄せにする正しい指定 */
+  justify-content: center;
+  text-align: left;
+}
+.MFF-screenshots {
+  width: 350px;
+  height: auto;
+  margin: 0 auto; 
+  display: flex;
+  gap: 10px;
+  padding: 70px 0;
+  align-items: center;    
+  justify-content: center; 
+}
+
+.The-world-of-MFF-text {
+  width: 1000px;
+  margin: 0 auto; 
+  display: flex;
+  padding: 70px 0;
+  flex-direction: column;
+  align-items: flex-start; /* ← 左寄せにする正しい指定 */
+  justify-content: center;
+  text-align: left;
+}
+
+.MFF-Thankyou {
+  width: 1000px;
+  margin: 0 auto; 
+  display: flex;
+  gap: 10px;
+  padding: 70px 0;
+  align-items: center;    
+  justify-content: center; 
+}
