--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,7 @@ body {
   flex-direction: column;
   align-items: center; 
   gap: 10px;
-  width: 200px;
+  padding:50px 0;
   height: auto;
 }
 
