--- a/styles.css
+++ b/styles.css
@@ -498,7 +498,7 @@ body {
   text-align: left;
 }
 .MFF-screenshots {
-  width: 350px;
+  width: 200px;
   height: auto;
   margin: 0 auto; 
   display: flex;
@@ -520,11 +520,16 @@ body {
 }
 
 .MFF-Thankyou {
-  width: 1000px;
+  width: 800px;
   margin: 0 auto; 
   display: flex;
   gap: 10px;
   padding: 70px 0;
   align-items: center;    
   justify-content: center; 
+}
+
+.MFFpage-last-Muffuffu {
+  width: 80px;
+  height: auto;
 }
