--- a/styles.css
+++ b/styles.css
@@ -453,7 +453,7 @@ body {
   margin: 0 auto; 
   display: flex;
   gap: 10px;
-  padding: 70px 0;
+  margin-top: 40px;
   align-items: center;    
   justify-content: center; 
 }
